added translation strings for alert, confirm and prompt; minor popup fix

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1345,6 +1345,14 @@
     "message": "Save",
     "description": "Save"
   },
+  "buttonConfirm": {
+    "message": "OK",
+    "description": "OK"
+  },
+  "buttonCancel": {
+    "message": "Cancel",
+    "description": "Cancel"
+  },
 
   "darkTheme": {
     "message": "Dark theme",
