added Toggle Reader Mode command (#351)

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -389,6 +389,10 @@
     "message": "Toggle mute",
     "description": "Toggle mute"
   },
+  "commandLabelToggleReaderMode": {
+    "message": "Toggle reader mode",
+    "description": "Toggle reader mode"
+  },
   "commandLabelScrollTop": {
     "message": "Scroll to the top",
     "description": "Scroll to the top"
@@ -693,6 +697,10 @@
   "commandDescriptionToggleMute": {
     "message": "Mutes or unmutes the current tab.",
     "description": "Mutes or unmutes the current tab."
+  },
+  "commandDescriptionToggleReaderMode": {
+    "message": "Activates or deactivates the reader view if available.",
+    "description": "Activates or deactivates the reader view if available."
   },
   "commandDescriptionScrollTop": {
     "message": "Scrolls to the top of the page.",
