--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -47,8 +47,8 @@
   },
 
   "settingLabelMouseButton": {
-    "message": "Gesture mouse button",
-    "description": "Gesture mouse button"
+    "message": "Activation button",
+    "description": "Activation button"
   },
   "settingLabelMouseButtonLeft": {
     "message": "left",
@@ -71,8 +71,8 @@
     "description": "Duration"
   },
   "settingLabelSuppressionKey": {
-    "message": "Suppression key",
-    "description": "Suppression key"
+    "message": "Deactivation key",
+    "description": "Deactivation key"
   },
   "settingLabelNoneKey": {
     "message": "None",
@@ -150,8 +150,8 @@
   },
 
   "settingDescriptionMouseButton": {
-    "message": "The mouse button which triggers the gesture.",
-    "description": "The mouse button which triggers the gesture."
+    "message": "Captures a new mouse gesture while the button is held down.",
+    "description": "Captures a new mouse gesture while the button is held down."
   },
   "settingDescriptionTimeoutActive": {
     "message": "Cancels the gesture after the mouse has not been moved for the specified time.",
@@ -162,8 +162,8 @@
     "description": "The duration in seconds until the gesture is cancelled."
   },
   "settingDescriptionSuppressionKey": {
-    "message": "Disables the mouse gesture if the key is pressed.",
-    "description": "Disables the mouse gesture if the key is pressed."
+    "message": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed.",
+    "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
     "message": "The minimum mouse movement until the gesture gets recognised.",
